# cv-cropper

./: app.py  pyproject.toml  requirements.txt
